--- a/Applications-2018-07-10-06-46-20.json
+++ b/Applications-2018-07-10-06-46-20.json
@@ -1,1 +1,5 @@
-{"objects":[{"name":"Sports","kind":"Application"},{"applications":["Local|Sports"],"name":"Court","kind":"Environment"},{"applications":["Local|Sports"],"name":"Stadium","kind":"Environment"}]}
+{"objects": [
+    {"name": "Sports", "kind": "Application"},
+    {"applications": ["Local|Sports"], "name": "Court","kind": "Environment"},
+    {"applications": ["Local|Sports"], "name": "Stadium", "kind": "Environment"}
+]}
